# ShapeComplexityIndex

./: CMakeLists.txt  Cal_Complex_opt.x.cpp  Calculators.cpp  Calculators.h  MurgeSCI.m  README.md  README.txt  ReadMe.md  ReadMe_BeforeRun  Run_mStepCal_SCI.py  ShapeComplexityIndex.xml  transportSimplex.h
include/: Mesh.h  VtkIO.h
include/Geodesic/: Geodesic.h
include/Geodesic/gw/gw_geodesic/: GW_TriangularInterpolation_ABC.h
include/Util/: AABB.h  Geom.h  SphericalHarmonics.h  SurfaceUtil.h
lib/: libMesh.dylib  libMesh.so.1.0
